# rust_cargo_sheppard

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.txt  backup_v1_fully_working_cargo_sheppard_v1.0.0_release.rar  build.rs  build_shepherd.bat  build_shepherd.ps1  shepherd_init.bat  shepherd_init.ps1  start_shepherd.bat  start_shepherd.ps1
src/: client.rs  config.rs  daemon.rs  ipc.rs  main.rs  monitor.rs  queue.rs  runner.rs  tray.rs  tui.rs
