[package]
name = "cargo-shepherd"
version = "1.0.0"
edition = "2021"
description = "System-wide Cargo build coordinator — priority queue, TUI, persistent config"
license = "MIT"
keywords = ["cargo", "rust", "build", "tui", "devtools"]

[[bin]]
name = "shepherd"
path = "src/main.rs"

# ──────────────────────────────────────────────────────────────────────────────
# Core deps (always included)
# ──────────────────────────────────────────────────────────────────────────────
[dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
clap         = { version = "4",    features = ["derive"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo      = "0.30"
uuid         = { version = "1",    features = ["v4"] }
chrono       = { version = "0.4",  features = ["serde"] }
colored      = "2"
toml         = "0.8"       # config file parsing
dirs         = "5"         # XDG / platform-correct config paths

[target.'cfg(windows)'.dependencies]
winapi       = { version = "0.3", features = ["libloaderapi", "shellapi", "winuser"] }

# ──────────────────────────────────────────────────────────────────────────────
# TUI deps (always included — shepherd ui tui)
# ──────────────────────────────────────────────────────────────────────────────
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }
futures      = "0.3"        # StreamExt for crossterm EventStream in TUI

[build-dependencies]
winres = "0.1"
